# Barrio

./: .gitignore  CITATION.bib  LICENSE  NeuroComparer.sln  NeuroComparer.vcxproj  NeuroComparer.vcxproj.filters  README.md  adf.json  datacontainer.cpp  datacontainer.h  edge.cpp  glsluniform_structs.h  glwidget.cpp  glwidget.h  glycogen.cpp  glycogen.h  glycogenanalysismanager.cpp  glycogenanalysismanager.h  glycogencluster.cpp  graph.cpp  grid3d.h  inputform.cpp  main.cpp  mainopengl.cpp  mesh.cpp  mesh.h  node.h  object.h  octree.cpp  openglmanager.h  performancerate.h  rendervertexdata.cpp  skeleton.cpp  skeleton.h  skeletonbranch.cpp  spatialhash.h  spatialhash3d.h  spec.json  ssbo_structs.h  ui_mainwindow.h
data/: README.md  skeletons.json
data/m3_data/: m3_full_corr.hvgx  m3_neurite_skeletons.json  m3_neurite_skeletons_big.json  skeletons - Copy.json  skeletons.json
doc/: extrafiles_path_help.html  metadata_hvgx_help.html  options_help.html  proximity_astro_mito_help.html  proximity_astrocyte_help.html  proximity_gly_help.html  proximity_neu_mito_help.html  xml_help.html
shaders/: space2d_grid_points_geom.glsl
src/: CMakeLists.txt  abstractionspace.cpp  abstractionspace.h  barchart.cpp  barchart.h  barchart_index.html  camera.cpp  camera.h  chart.js  datacontainer.cpp  datacontainer.h  dbscan.cpp  dbscan.h  distancematrix.cpp  distancematrix.h  distancematrix_index.html  distancetree.cpp  distancetree.h  distancetree.js  distancetree_index.html  edge.cpp  edge.h  globalParameters.h  glsluniform_structs.h  glwidget.cpp  glwidget.h  glycogencluster.h  graph.cpp  graph.h  graphmanager.cpp  graphmanager.h  grid3d.cpp  histogram.h  index.html  infoviswidget.cpp  infoviswidget.h  inputform.cpp  inputform.h  javascriptproxy.cpp  javascriptproxy.h  (+47 more)
src/shaders/: coord_system_frag.glsl  coord_system_geom.glsl  coord_system_vert.glsl  glycogen_frag.glsl  hvgx_selection_frag.glsl  mesh_frag.glsl  mesh_frag_simplified.glsl  mesh_geom.glsl  mesh_vert.glsl  mesh_vert_simplified.glsl  slice_frag.glsl  slice_geom.glsl  slice_vert.glsl
src/vismethods/: barchart.cpp  barchart.h  boxplot.cpp  boxplot.h  distancematrix.cpp  distancematrix.h  distancetree.cpp  distancetree.h  histogram.cpp  histogram.h  mito_scheme.cpp  mito_scheme.h  mitoboxplot.cpp  mitoboxplot.h  scatterplot.cpp  scatterplot.h  vismethod.h
src/web/: barchart.js  barchart_index.html  boxplot_index.html  chart.js  distancematrix_index.html  distancetree.js  distancetree_index.html  globalStyleParams.css  histogram_index.html  index.html  index.js  mito_scheme_index.html  mitoboxplot_index.html  phylotree.css  scatter.css  scatter.html  scatter.js  scatterplot_index.html
